--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,35 @@ body {
   padding: 10px 20px;
 }
 
+.button_base {
+  font-size: 16px;
+  padding: 15px 0px;
+}
+
 .button_medium {
   font-size: 16px;
   padding: 21px 24px;
+}
+
+.button_save {
+  font-size: 14px;
+  color: white;
+  background-color: #fbb017;
+  padding: 13px 13px;
+  width: fit-content;
+  border-radius: 4px;
+  border: none;
+  margin-left: auto;
+}
+
+.button-list-skill {
+  font-size: 12px;
+  width: 125px;
+  height: 28px;
+  background: rgba(251, 176, 23, 0.6);
+  border: 1px solid #fbb017;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .background-purple {
@@ -50,6 +76,12 @@ body {
   border-color: #5e50a1;
 }
 
+.border-yellow {
+  border-width: 1px;
+  border-style: solid;
+  border-color: #fbb017;
+}
+
 .fs-44px {
   font-size: 44px;
 }
@@ -80,6 +112,29 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.input_style > label {
+  color: #9ea0a5;
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+.input_style > input {
+  height: 50px;
+}
+
+.input_style > input,
+textarea {
+  border: 1px solid #e2e5ed;
+  border-radius: 4px;
+  padding: 15px;
+}
+
+.input_style > input::placeholder,
+textarea::placeholder {
+  font-size: 14px;
+  color: #858d96;
 }
 
 footer {
