--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -5,6 +5,7 @@
 .container-auth {
   background-color: #e5e5e5;
   height: 100vh;
+  overflow: hidden;
 }
 
 .hire-image {
@@ -55,6 +56,9 @@
   margin-top: -200px;
   padding-bottom: 45px;
 }
+.short-text {
+  display: none;
+}
 .container-title {
   font-family: "Open Sans";
   font-style: normal;
@@ -92,9 +96,12 @@
 
   color: #9ea0a5;
 }
+.asdfg {
+  width: 100% !important;
+}
 .auth-form input {
   box-sizing: border-box;
-  width: 570px;
+  /* width: 570px; */
   height: 50px;
   background: #ffffff;
   border: 1px solid #e2e5ed;
@@ -170,4 +177,57 @@
   background: #fbb017;
   border-radius: 4px;
   color: white;
+}
+@media (max-width: 870px) {
+  .row-auth {
+    flex-direction: row;
+    height: 80vh;
+    margin-right: 65%;
+  }
+  .bg-image {
+    display: none;
+  }
+
+  .full-text {
+    display: none;
+  }
+  .short-text {
+    display: inline-block;
+  }
+}
+@media (max-width: 576px) {
+  .row-auth {
+    flex-direction: row;
+    height: 80vh;
+    max-width: 20px;
+  }
+  .asdf {
+    padding: 20px;
+    background-color: red;
+  }
+  .bg-image {
+    display: none;
+  }
+
+  .full-text {
+    display: none;
+  }
+  .short-text {
+    display: inline-block;
+  }
+  /* .auth-form-text {
+    margin-left: 20px;
+  }
+  .auth-form input {
+    max-width: 80%;
+    margin-left: 20px;
+  }
+  .in-button {
+    max-width: 50%;
+    margin-left: 100px;
+  }
+  .account-check {
+    max-width: 50%;
+    margin-left: 100px;
+  } */
 }
