--- a/src/pages/SignupCompany/index.css
+++ b/src/pages/SignupCompany/index.css
@@ -1,4 +1,21 @@
 .container-auth-signup-company {
   background-color: #e5e5e5;
   height: 110vh;
+  overflow: hidden;
+}
+
+@media (max-width: 576px) {
+  .container-auth-signup-company {
+    height: 120vh;
+  }
+  .bg-image {
+    display: none;
+  }
+
+  .full-text {
+    display: none;
+  }
+  .short-text {
+    display: inline-block;
+  }
 }
