--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,7 @@ body {
 
 .button-list-skill {
   font-size: 12px;
-  width: 125px;
-  height: 28px;
+  padding: 7px 20px;
   background: rgba(251, 176, 23, 0.6);
   border: 1px solid #fbb017;
   padding-right: 10px;
