--- a/src/pages/ChatPage/chatPage.css
+++ b/src/pages/ChatPage/chatPage.css
@@ -31,3 +31,47 @@
     margin-left: 10px;
     font-weight: 600;
 }
+
+.chat__company_desc{
+    background: #E5E5E5;
+    min-width: 300px;
+    max-width: 300px;
+    padding: 10px;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.chat__user{
+    justify-content: end;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+.chat__user__desc{
+    background: #5e50a1;
+    color: white;
+    min-width: 300px;
+    max-width: 300px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.input__chat{
+    position: absolute;
+    top: 710px;
+    margin-left:40px ;
+    background: #FFFFFF;
+    border: 1px solid #E2E5ED;
+    border-radius: 23px;
+    width: 800px;
+    padding: 10px;
+    /* color: #E2E5ED; */
+}
+
+.send__chat{
+    position: absolute;
+    top: 712px;
+    margin-left:846px ;
+    background: none;
+    border: none;
+}
