--- a/src/pages/HomePage/homePage.css
+++ b/src/pages/HomePage/homePage.css
@@ -1,132 +1,129 @@
-.home__tittle{
-    background-color: #5E50A1;
-    padding-left: 10%;
-    padding-right: 10%;
-    height: 60px;
+.home__tittle {
+  background-color: #5e50a1;
+
+  height: 60px;
 }
 
-.home__tittle h3{
-    font-size: 20px;
-    margin-top: 5px;
-    color: white;
+.home__tittle h3 {
+  font-size: 20px;
+  margin-top: 5px;
+  color: white;
 }
 
-.home__body{
-    width: 100%;
-    background:    #F6F7F8;
-    padding-bottom:30px;
+.home__body {
+  width: 100%;
+  background: #f6f7f8;
+  padding-bottom: 30px;
 }
 
-.home__container{
-    width: 80%;
-    padding-top: 50px;
-    margin: 0 auto;
+.home__container {
+  padding-top: 50px;
 }
 
 .home__searchbar {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    box-sizing: border-box;
- }
- .home__searchbar input {
-    width: 100%;
-    background: #FFFFFF;
-    box-shadow: 0px 1px 20px rgba(197, 197, 197, 0.25);
-    border-radius: 8px;
-    border: none;
-    height: 70px;
-    padding: 20px
- }
- .home__searchbar input:focus-visible {
-    border: none;
-    outline: none;
-    box-shadow: 0 0 6px #5E50A1;
- }
- .home__searchbar > div , 
- .home__searchbar > button {
-    position: absolute;
- }
- .home__searchbar > button {
-    width : 121px;
-    height :50px;
-    margin: 10px 10px 10px auto;
-    right: 0;
-    background: #5E50A1;
-    border-radius: 4px;
-    color: white;
-    border: none;
- }
- .home__searchbar > div {
-    height: 100%;
-    right: 135px;
- }
- .home__searchbar p {
-    margin:0 ;
- }
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  box-sizing: border-box;
+}
+.home__searchbar input {
+  width: 100%;
+  background: #ffffff;
+  box-shadow: 0px 1px 20px rgba(197, 197, 197, 0.25);
+  border-radius: 8px;
+  border: none;
+  height: 70px;
+  padding: 20px;
+}
+.home__searchbar input:focus-visible {
+  border: none;
+  outline: none;
+  box-shadow: 0 0 6px #5e50a1;
+}
+.home__searchbar > div,
+.home__searchbar > button {
+  position: absolute;
+}
+.home__searchbar > button {
+  width: 121px;
+  height: 50px;
+  margin: 10px 10px 10px auto;
+  right: 0;
+  background: #5e50a1;
+  border-radius: 4px;
+  color: white;
+  border: none;
+}
+.home__searchbar > div {
+  height: 100%;
+  right: 135px;
+}
+.home__searchbar p {
+  margin: 0;
+}
 
- .sortDrop {
-    top: 70px;
-    position: absolute ;
-    display: none;
-    z-index: 9;
-    width: 180px;
- }
+.sortDrop {
+  top: 70px;
+  position: absolute;
+  display: none;
+  z-index: 9;
+  width: 180px;
+}
 
- .active {
-    display: block
- }
+.active {
+  display: block;
+}
 
- .main__section {
-    width: 100%;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
- }
+.main__section {
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
- /* .home__pagination{
+/* .home__pagination{
     width: auto;
     display: flex;
  } */
 
- .pagination {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    cursor: pointer;
-    margin-top: 50px;
-    gap: 10px;
-  }
-  
-  .pagination a {
-    text-decoration: none;
-    padding: 18px 24px;
-    border-radius: 5px;
-    border: 1px solid #5E50A1;
-    color: #5E50A1;
-  }
-  
-  .pagination__link {
-    font-weight: bold;
-  }
-  
-  .pagination__link--active a {
-    text-decoration: none !important;
-    color: #fff !important;
-    background: #5E50A1;
-  }
-  
-  .pagination__link--disabled a {
-    text-decoration: none;
-    color: rgb(198, 197, 202);
-    border: 1px solid rgb(198, 197, 202);
-  }
+.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  cursor: pointer;
+  margin-top: 50px;
+  gap: 10px;
+}
 
- @media screen and (max-width : 567px) {
-    .home__container {
-       width: 95%;
-    }   
- }
+.pagination a {
+  text-decoration: none;
+  padding: 18px 24px;
+  border-radius: 5px;
+  border: 1px solid #5e50a1;
+  color: #5e50a1;
+}
+
+.pagination__link {
+  font-weight: bold;
+}
+
+.pagination__link--active a {
+  text-decoration: none !important;
+  color: #fff !important;
+  background: #5e50a1;
+}
+
+.pagination__link--disabled a {
+  text-decoration: none;
+  color: rgb(198, 197, 202);
+  border: 1px solid rgb(198, 197, 202);
+}
+
+@media screen and (max-width: 567px) {
+  .home__container {
+    width: 95%;
+  }
+}
