--- a/src/pages/ChatPage/chatPage.css
+++ b/src/pages/ChatPage/chatPage.css
@@ -1,77 +1,130 @@
-.chat__background{
-    background: #E5E5E5;;
+.chat__background {
+  background: #e5e5e5;
 }
 
-.chat__navbar{
-    box-shadow: 0px 10px 50px rgba(132, 132, 132, 0.25);
+.chat__navbar {
+  box-shadow: 0px 10px 50px rgba(132, 132, 132, 0.25);
 }
 
-.left__section{
-    background:white;
+.left__section {
+  background: white;
+  min-height: 600px;
+  max-height: 600px;
+  margin-right: 50px;
+  border-radius: 5px;
+}
+
+.right__section {
+  background: white;
+  min-height: 600px;
+  max-height: 600px;
+  border-radius: 5px;
+}
+
+.chat__container {
+  padding-top: 50px;
+  padding-bottom: 300px;
+}
+
+.left__section h3 {
+  margin-top: 20px;
+  margin-left: 10px;
+  font-weight: 600;
+}
+
+.chat__company_desc {
+  background: #e5e5e5;
+  min-width: 300px;
+  max-width: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+
+.chat__user {
+  justify-content: end;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.chat__user__desc {
+  background: #5e50a1;
+  color: white;
+  min-width: 300px;
+  max-width: 300px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.input__chat {
+  position: absolute;
+  top: 710px;
+  margin-left: 40px;
+  background: #ffffff;
+  border: 1px solid #e2e5ed;
+  border-radius: 23px;
+  width: 800px;
+  padding: 10px;
+  /* color: #E2E5ED; */
+}
+
+.send__chat {
+  position: absolute;
+  top: 712px;
+  margin-left: 846px;
+  background: none;
+  border: none;
+}
+
+@media screen and (max-width: 768px) {
+  .chat__container {
+    display: none;
+  }
+  .left__section {
+    background: white;
     min-height: 600px;
     max-height: 600px;
     margin-right: 50px;
     border-radius: 5px;
-}
-
-.right__section{
-    background:white;
+  }
+  .right__section {
+    background: white;
     min-height: 600px;
     max-height: 600px;
     border-radius: 5px;
-}
-
-.chat__container{
-    padding-top: 50px;
-    padding-bottom: 300px;
-}
-
-.left__section h3{
-    margin-top: 20px;
-    margin-left: 10px;
-    font-weight: 600;
-}
-
-.chat__company_desc{
-    background: #E5E5E5;
+  }
+  .chat__company_desc {
+    background: #e5e5e5;
     min-width: 300px;
     max-width: 300px;
     padding: 10px;
     border-radius: 10px;
     margin-left: 10px;
-}
-
-.chat__user{
-    justify-content: end;
-    margin-right: 10px;
-    margin-top: 10px;
-}
-
-.chat__user__desc{
+  }
+  .chat__user__desc {
     background: #5e50a1;
     color: white;
     min-width: 300px;
     max-width: 300px;
     padding: 10px;
     border-radius: 10px;
-}
-
-.input__chat{
+  }
+  .input__chat {
     position: absolute;
     top: 710px;
-    margin-left:40px ;
-    background: #FFFFFF;
-    border: 1px solid #E2E5ED;
+    margin-left: 40px;
+    background: #ffffff;
+    border: 1px solid #e2e5ed;
     border-radius: 23px;
     width: 800px;
     padding: 10px;
     /* color: #E2E5ED; */
-}
-
-.send__chat{
+  }
+  .send__chat {
     position: absolute;
     top: 712px;
-    margin-left:846px ;
+    margin-left: 846px;
     background: none;
     border: none;
+  }
 }
